--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -1,26 +1,103 @@
 {
-  "name": "naturewatch",
-  "version": "0.0.0",
-  "private": true,
+  "name": "NatureWatch",
+  "description": "A geospatial web application using Vue3, Vuetify and Mapbox",
+  "version": "0.1.0",
+  "author": {
+    "name": "Maryn",
+    "url": "https://maryn.laarse.co.za/"
+  },
+  "homepage": "https://github.com/marynvdl/naturewatch-app",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:marynvdl/naturewatch-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/marynvdl/naturewatch-app/issues"
+  },
+  "engines": {
+    "node": ">=18.14.2"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "clean": "rimraf ./node_modules/.vite",
+    "build": "run-p type-check build-only",
+    "build:analyze": "vite build --mode analyze",
+    "build:clean": "rimraf dist",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --cache --cache-location ./node_modules/.vite/vite-plugin-eslint && prettier . -w -u",
+    "lint:style": "stylelint \"./**/*.{css,sass,scss,htm,html,vue}\" --fix --cache-location ./node_modules/.vite/vite-plugin-stylelint  && prettier  \"./**/*.{css,sass,scss,htm,html,vue}\" -w -u",
+    "test:unit": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
-    "core-js": "3.21.1",
-    "mapbox-gl": "^1.13.2",
-    "vue": "^3.2.45"
+    "@mdi/font": "^7.1.96",
+    "core-js": "^3.29.0",
+    "mapbox-gl": "^2.13.0",
+    "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.7",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
+    "@types/jsdom": "^21.1.0",
+    "@types/mapbox-gl": "^2.7.10",
+    "@types/node": "^18.14.6",
+    "@types/webfontloader": "^1.6.35",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^2.7.1",
-    "sass": "^1.57.1",
-    "vite": "^4.0.0"
+    "@vitest/coverage-c8": "^0.29.2",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/test-utils": "^2.3.0",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.35.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-vuejs-accessibility": "^2.1.0",
+    "eslint-plugin-vuetify": "^2.0.0-beta.2",
+    "eslint-plugin-yaml": "^0.5.0",
+    "jsdom": "^21.1.0",
+    "lint-staged": "^13.1.2",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.6",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.1.3",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.58.3",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-order": "^6.0.2",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vite-plugin-checker": "0.5.6",
+    "vite-plugin-vuetify": "^1.0.2",
+    "vitest": "^0.29.2",
+    "vue-eslint-parser": "^9.1.0",
+    "vue-tsc": "^1.2.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,json,yaml,yml,yaml,vue,htm,html,md}": "eslint --fix --cache --cache-location ./node_modules/.vite/vite-plugin-eslint",
+    "*.{css,sass,scss,vue,htm,html}": "stylelint --fix --cache --cache-location ./node_modules/.vite/vite-plugin-stylelint",
+    "*": "prettier -w -u"
+  },
+  "resolutions": {
+    "json5": "^2.2.3",
+    "http-cache-semantics": "^4.1.1"
+  },
+  "stackblitz": {
+    "startCommand": "yarn run test"
   }
 }
