--- a/frontend/naturewatch/tsconfig.json
+++ b/frontend/naturewatch/tsconfig.json
@@ -8,5 +8,6 @@
     { "path": "./tsconfig.config.json" },
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.vitest.json" }
-  ]
+  ],
+  "exclude": ["dist"]
 }
