--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -32,6 +32,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@mdi/font": "^7.1.96",
     "@turf/turf": "^6.5.0",
     "core-js": "^3.29.0",
