--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.0",
     "@types/mapbox-gl": "^2.7.10",
     "@types/node": "^18.14.6",
     "@types/webfontloader": "^1.6.35",
