Add force_https = true in fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -6,6 +6,7 @@ processes = []
 [[services]]
   http_checks = []
   internal_port = 8080
+  force_https = true
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
