--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -32,6 +32,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@mdi/font": "^7.1.96",
     "@turf/turf": "^6.5.0",
