--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    directory: "/frontent/naturewatch/"
+    directory: "/frontend/naturewatch/"
     schedule:
       interval: "weekly"
     target-branch: "develop"
