--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -24,15 +24,32 @@ jobs:
       - name: Try a full docker compile to flag any JS issues too
         run: docker build -t naturewatch .
 
-  deploy:
-      name: Deploy app
+  deploy_test_app:
+      name: Deploy Test App
+      needs: test_suite
+      runs-on: ubuntu-latest
+      if: github.ref == 'refs/heads/develop'
+      steps:
+        - name: Check out source code
+          uses: actions/checkout@v3
+          with:
+            ref: 'develop'
+        - name: Setup flyctl for test app
+          uses: superfly/flyctl-actions/setup-flyctl@master
+        - name: Deploy test app using flyctl
+          run: flyctl deploy --app naturewatch --remote-only
+
+  deploy_demo_app:
+      name: Deploy Demo App
       needs: test_suite
       runs-on: ubuntu-latest
       if: github.ref == 'refs/heads/main'
       steps:
         - name: Check out source code
           uses: actions/checkout@v3
-        - name: Setup flyctl
+          with:
+            ref: 'main'
+        - name: Setup flyctl for demo app
           uses: superfly/flyctl-actions/setup-flyctl@master
-        - name: Deploy using flyctl
-          run: flyctl deploy --remote-only
+        - name: Deploy demo app using flyctl
+          run: flyctl deploy --app naturewatch-demo --remote-only
