--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -41,6 +41,7 @@
     "mapbox-gl": "^2.15.0",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "posthog-js": "^1.87.6",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.7",
