--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -37,7 +37,7 @@ jobs:
         - name: Setup flyctl for test app
           uses: superfly/flyctl-actions/setup-flyctl@master
         - name: Deploy test app using flyctl
-          run: flyctl deploy --app naturewatch --remote-only
+          run: flyctl deploy --env VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} --app naturewatch --remote-only
 
   deploy_demo_app:
       name: Deploy Demo App
@@ -52,4 +52,4 @@ jobs:
         - name: Setup flyctl for demo app
           uses: superfly/flyctl-actions/setup-flyctl@master
         - name: Deploy demo app using flyctl
-          run: flyctl deploy --app naturewatch-demo --remote-only
+          run: flyctl deploy --env VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} --app naturewatch-demo --remote-only
