--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run integration test suite in docker
         run: docker-compose exec -T naturewatch-test pytest -m integration app/tests -vv
       - name: Try a full docker compile to flag any JS issues too
-        run: docker build --build-arg VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} -t naturewatch .
+        run: docker build -t naturewatch .
 
   deploy_test_app:
       name: Deploy Test App
@@ -37,7 +37,7 @@ jobs:
         - name: Setup flyctl for test app
           uses: superfly/flyctl-actions/setup-flyctl@master
         - name: Deploy test app using flyctl
-          run: flyctl deploy --env VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} --app naturewatch --remote-only
+          run: flyctl deploy --build-arg VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} --app naturewatch --remote-only
 
   deploy_demo_app:
       name: Deploy Demo App
@@ -52,4 +52,4 @@ jobs:
         - name: Setup flyctl for demo app
           uses: superfly/flyctl-actions/setup-flyctl@master
         - name: Deploy demo app using flyctl
-          run: flyctl deploy --env VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} --app naturewatch-demo --remote-only
+          run: flyctl deploy --build-arg VITE_APP_POSTHOG_TOKEN=${{ secrets.POSTHOG_TOKEN }} --app naturewatch-demo --remote-only
