--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -53,24 +53,24 @@
     "@types/mapbox-gl": "^2.7.19",
     "@types/node": "^20.10.1",
     "@types/webfontloader": "^1.6.38",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.29.2",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.35.0",
+    "eslint": "^8.54.0",
     "eslint-config-google": "^0.14.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-jsdoc": "^40.3.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "eslint-plugin-vue": "^9.18.1",
-    "eslint-plugin-vuejs-accessibility": "^2.1.0",
-    "eslint-plugin-vuetify": "^2.0.0-beta.2",
+    "eslint-plugin-vue": "^9.19.2",
+    "eslint-plugin-vuejs-accessibility": "^2.2.0",
+    "eslint-plugin-vuetify": "^2.1.0",
     "eslint-plugin-yaml": "^0.5.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.1.0",
