--- a/frontend/naturewatch/.eslintrc.yml
+++ b/frontend/naturewatch/.eslintrc.yml
@@ -6,7 +6,8 @@ env:
 extends:
   - eslint:recommended
   - google
-  - plugin:@typescript-eslint/eslint-recommended
+  - plugin:@typescript-eslint/recommended
+  - plugin:@typescript-eslint/stylistic
   - plugin:import/recommended
   - plugin:import/typescript
   - plugin:jsdoc/recommended
@@ -28,22 +29,25 @@ parserOptions:
   parser: '@typescript-eslint/parser'
   sourceType: module
   createDefaultProgram: true
-  project:
-    - ./tsconfig.json
+  project: ['./tsconfig.eslint.json']
 rules:
+  "@typescript-eslint/no-explicit-any": "off"
+  "@typescript-eslint/no-unused-vars": "off"
+  "@typescript-eslint/no-var-requires": "off"
   new-cap: off
   no-invalid-this: off
   no-unused-vars: warn
   require-jsdoc: warn
   valid-jsdoc: off
   jsdoc/require-param-type: off
+  jsdoc/require-param-description: off
   jsdoc/require-param:
     - off
     - enableRootFixer: false
   jsdoc/require-returns-description: off
   jsdoc/require-returns-type: off
   jsdoc/require-returns: off
-  tsdoc/syntax: warn
+  tsdoc/syntax: off
   vue/html-self-closing:
     - error
     - html:
