--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -48,13 +48,14 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@babel/types": "^7.23.5",
     "@types/jsdom": "^21.1.6",
     "@types/mapbox__mapbox-gl-draw": "^1.4.6",
     "@types/mapbox-gl": "^2.7.19",
     "@types/node": "^20.10.1",
     "@types/webfontloader": "^1.6.38",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.29.2",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -88,10 +89,10 @@
     "stylelint-order": "^6.0.3",
     "typescript": "^4.9.5",
     "vite": "^4.5.0",
-    "vite-plugin-checker": "0.5.6",
+    "vite-plugin-checker": "0.6.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.29.2",
-    "vue-eslint-parser": "^9.1.0",
+    "vue-eslint-parser": "^9.3.2",
     "vue-tsc": "^1.2.0"
   },
   "lint-staged": {
