--- a/frontend/naturewatch/tsconfig.app.json
+++ b/frontend/naturewatch/tsconfig.app.json
@@ -4,7 +4,11 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    
+    // workaround for https://github.com/vuejs/tsconfig/issues/6
+    "preserveValueImports": false,
+    "importsNotUsedAsValues": "remove",
+    "verbatimModuleSyntax": true,
+    // end workaround
     "esModuleInterop": true,
     "composite": true,
     "baseUrl": ".",
