--- a/frontend/naturewatch/.eslintrc.yml
+++ b/frontend/naturewatch/.eslintrc.yml
@@ -31,9 +31,9 @@ parserOptions:
   createDefaultProgram: true
   project: ['./tsconfig.eslint.json']
 rules:
-  "@typescript-eslint/no-explicit-any": "off"
-  "@typescript-eslint/no-unused-vars": "off"
-  "@typescript-eslint/no-var-requires": "off"
+  '@typescript-eslint/no-explicit-any': 'off'
+  '@typescript-eslint/no-unused-vars': 'off'
+  '@typescript-eslint/no-var-requires': 'off'
   new-cap: off
   no-invalid-this: off
   no-unused-vars: warn
