--- a/frontend/naturewatch/package.json
+++ b/frontend/naturewatch/package.json
@@ -34,8 +34,6 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@mdi/font": "^7.3.67",
-    "@turf/bearing": "^6.5.0",
-    "@turf/destination": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "core-js": "^3.33.3",
     "mapbox-gl": "^3.0.0",
@@ -49,19 +47,20 @@
   },
   "devDependencies": {
     "@babel/types": "^7.23.5",
+    "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
     "@types/mapbox__mapbox-gl-draw": "^1.4.6",
     "@types/mapbox-gl": "^2.7.19",
     "@types/node": "^20.10.1",
     "@types/webfontloader": "^1.6.38",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-vue": "^4.5.1",
     "@vitest/coverage-c8": "^0.29.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.54.0",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.55.0",
     "eslint-config-google": "^0.14.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -71,7 +70,7 @@
     "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-plugin-vue": "^9.19.2",
     "eslint-plugin-vuejs-accessibility": "^2.2.0",
-    "eslint-plugin-vuetify": "^2.1.0",
+    "eslint-plugin-vuetify": "^2.1.1",
     "eslint-plugin-yaml": "^0.5.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.2.0",
@@ -79,15 +78,15 @@
     "postcss": "^8.4.21",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "rimraf": "^4.1.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.69.5",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint": "^16.0.2",
+    "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-order": "^6.0.3",
-    "typescript": "^4.9.5",
+    "stylelint-order": "^6.0.4",
+    "typescript": "^5.0.0",
     "vite": "^4.5.0",
     "vite-plugin-checker": "0.6.2",
     "vite-plugin-vuetify": "^1.0.2",
