--- a/frontend/naturewatch/tsconfig.app.json
+++ b/frontend/naturewatch/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
-    
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "composite": true,
     "baseUrl": ".",
@@ -13,5 +13,6 @@
     },
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "types": ["vuetify"]
-  }
+  },
+  "include": ["src/**/*", "src/**/*.vue"]
 }
