--- a/frontend/naturewatch/tsconfig.config.json
+++ b/frontend/naturewatch/tsconfig.config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
-  "extends": "@vue/tsconfig/tsconfig.node.json",
+  "extends": ["@tsconfig/node18/tsconfig.json", "@vue/tsconfig/tsconfig.json"],
   "include": [
     "vite.config.*",
     "vitest.config.*",
