Add loading screen and fix eslint issue

--- a/frontend/naturewatch/.eslintrc.yml
+++ b/frontend/naturewatch/.eslintrc.yml
@@ -30,6 +30,7 @@ parserOptions:
   sourceType: module
   createDefaultProgram: true
   project: ['./tsconfig.eslint.json']
+  extraFileExtensions: ['.vue']
 rules:
   '@typescript-eslint/no-explicit-any': 'off'
   '@typescript-eslint/no-unused-vars': 'off'
